--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,74 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: grey;
+}
+header h2 {
+  font-size: 20px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+main h3 {
+  font-size: 30px;
+  color: red;
+  font-weight: bold;
+}
+main fieldset {
+  width: 30%;
+}
+main fieldset .choix {
+  text-align: center;
+}
+main fieldset .flex {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 0.5em;
+  padding-top: 0.5em;
+}
+main fieldset .flex label {
+  display: block;
+  width: 300px;
+  margin: auto;
+  font-size: 18px;
+  text-align: right;
+}
+main fieldset .flex input {
+  font-size: 18px;
+  border: 1px grey solid;
+  border-top: 0px;
+}
+main fieldset .flex #list {
+  background-color: grey;
+  list-style-type: none;
+  text-align: left;
+}
+main fieldset .flex #list li:hover {
+  background-color: green;
+}
+main button {
+  width: 70px;
+  height: 40px;
+}
+
+footer {
+  background-color: grey;
+}
+footer p {
+  color: red;
+  text-align: center;
+  font-size: 20px;
+  font-weight: lighter;
 }/*# sourceMappingURL=style.css.map */
